2009-03-13  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-03-13  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.20.0 ===

	* configure.in: Bump version to 2.20.0

2009-03-13  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-03-12  Matthias Clasen  <mclasen@redhat.com>

	* glib/gbase64.c: Avoid integer overflows in the base64
	functions. Fixes CVE-2008-4316

2009-03-11  Stef Walter  <stef@memberwebs.com>

	* glib/gchecksum.c: Document and guarantee hex digests will
	be returned in lower case. Fixes bug #574019

2009-03-02  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump version

2009-03-02  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.10 ===

2009-03-02  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump version

2009-03-02  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.9 ===

2009-03-02  Matthias Clasen <mclasen@redhat.com>

	* NEWS: Updates

2009-03-01  Matthias Clasen <mclasen@redhat.com>

	Bug 572508 – gmarkup speedup ...

	* glib/gmarkup.c: Various optimizations: do less allocations by
	keeping a pool of GStrings, do in-place unescaping, avoid redundant
	utf-8 validation. Patch by Michael Meeks

	* tests/markups/fail-36.gmarkup: Adapt

2009-03-01  Matthias Clasen <mclasen@redhat.com>

	* glib/gthread.c: Fix docs.

2009-03-01  Matthias Clasen <mclasen@redhat.com>

	* tests/slice-threadinit.c: Change one magazine size from 77 to 81
	to make distcheck work on x86-64.

2009-02-27  Tor Lillqvist  <tml@novell.com>

	Bug 167569 - g_string_append_printf crashes on win32 when used
	with a NULL argument

	* glib/gnulib/vasnprintf.c (vasnprintf): Add workaround for buggy
	programs. Patch by Owen.

2009-02-23  Paolo Borelli  <pborelli@katamail.com>

	* glib/gutf8.c (_g_utf8_make_valid):
	sanity check the input paramter. 

2009-02-23  Tor Lillqvist  <tml@novell.com>

	Bug 570501 - g_win32_get_system_data_dirs uses invalid conversion
	of function pointer to object pointer
